--- a/BaselinkerSubiektConnector/Properties/Resources.resx
+++ b/BaselinkerSubiektConnector/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="nexolink" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\nexolink.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="nexo_linker_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\nexo-linker-logo.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
